# quant-infra-db

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: README.md  api-designer.md  bug-investigator.md  dependency-manager.md  documentation-specialist.md  git-commit-reviewer.md  performance-optimizer.md  python-architect.md  refactor-specialist.md  release-manager.md  security-reviewer.md  test-engineer.md
.claude/knowledge/: architecture.md  coding-standards.md  commands.md  feature-strategies-report-metrics.md  project-skill.md  stack-decisions.md
.claude/memory/: anti-patterns.md  lessons-learned.md  recurring-bugs.md
.claude/playbooks/: bugfix-workflow.md  code-review.md  dependency-upgrade.md  feature-development.md  release-checklist.md
.github/: copilot-instructions.md
docs/: modules.md  overview.md  usage.md
init-scripts/: 01_create_databases.sql  02_enable_timescaledb.sql  03_schema_csm_set.sql  04_schema_gateway.sql  05_schema_strategy_report.sql  06_continuous_aggregates.sql  07_engine_catalog.sql  08_schema_db_tfex_s50_multi_tf_swing.sql  09_schema_db_tfex_s50_multi_tf_swing_ohlcv.sql  10_schema_market_data.sql  11_market_data_caggs.sql  12_schema_execution.sql  13_execution_strategy_id.sql  14_schema_orderbook.sql  15_orderbook_greeks.sql  16_orderbook_features.sql  17_schema_ticker.sql  18_ticker_dq.sql  19_monitor_role.sql  20_schema_crypto.sql  21_crypto_dq.sql  22_engine_registry_crypto.sql  23_schema_db_cash_and_carry_set_tfex.sql  mongo-init.js
scripts/: backup.sh  restore.sh
src/: config.py  main.py
tests/: conftest.py  test_config.py  test_crypto_schema.py  test_db.py  test_execution_schema.py  test_infra.py  test_main.py  test_models.py  test_mongo.py  test_monitor_role.py  test_orderbook_schema.py  test_postgres.py  test_repositories.py
(+28 files in other folders)
