[project]
name = "quant-infra-db"
version = "0.1.0"
description = "Database infrastructure layer for the Quant Trading system — PostgreSQL + TimescaleDB + MongoDB via Docker Compose."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "lumduan", email = "bad.sonsuk@gmail.com" }]
keywords = ["quant", "trading", "infrastructure", "postgresql", "timescaledb", "mongodb", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "asyncpg>=0.29",
    "motor>=3.5",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pre-commit>=3.7",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--cov=src", "--cov-report=term-missing", "--cov-fail-under=80"]
markers = [
    "infra: tests that require a running Docker Compose stack (skipped by default)",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.uv]
default-groups = ["dev"]
